Remove camelCase on export request parameters

--- a/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-export-dip/archive-export-dip.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-export-dip/archive-export-dip.component.html
@@ -20,34 +20,34 @@
 
         <div class="ui-g-12"></div>
         <div class="ui-g-12">
-            <h3>Common parameters</h3>
+            <h3>Paramètres communs</h3>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Comment</span>
+            <span>Intitulé</span>
             <br/>
-            <input type="text" pInputText placeholder="Commentaire" [(ngModel)]="comment"/>
+            <input type="text" pInputText placeholder="Intitulé" [(ngModel)]="comment"/>
         </div>
         <div class="ui-g-4 textAlignLeft">
-            <span>Archival Agreement (Transfer Required)</span>
+            <span>Contrat d'entrée (Transfer Required)</span>
             <br/>
             <input type="text" pInputText placeholder="Archival Agreement" [(ngModel)]="archivalAgreement"/>
         </div>
         <div class="ui-g-4 textAlignLeft">
-            <span>Originating Agency Identifier (Transfer Required)</span>
+            <span>Identifiant du service producteur (Transfer Required)</span>
             <br/>
             <input type="text" pInputText placeholder="Originating Agency Identifier"
                    [(ngModel)]="originatingAgencyIdentifier"/>
         </div>
         <div class="ui-g-4 textAlignLeft">
-            <span>Submission Agency Identifier</span>
+            <span>Identifiant du service versant</span>
             <br/>
             <input type="text" pInputText placeholder="Submission Agency Identifier"
                    [(ngModel)]="submissionAgencyIdentifier"/>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Archival Agency Identifier (Required)</span>
+            <span>Identifiant du service d'archives (Required)</span>
             <br/>
             <input type="text" pInputText placeholder="Archival Agency Identifier"
                    [(ngModel)]="archivalAgencyIdentifier"/>
@@ -55,49 +55,49 @@
 
         <div class="ui-g-12"></div>
         <div class="ui-g-12">
-            <h3>Transfer only parameters</h3>
+            <h3>Paramètres pour le transfert</h3>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Related Transfer Reference (use ; separator)</span>
+            <span>Référence à un transfert d'archives lié (use ; separator)</span>
             <br/>
             <input type="text" pInputText placeholder="Related Transfer Reference"
                    [(ngModel)]="relatedTransferReference"/>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Transfer Request Reply Identifier</span>
+            <span>Identifiant de la réponse à une demande de transfert</span>
             <br/>
             <input type="text" pInputText placeholder="Transfer Request Reply Identifier"
                    [(ngModel)]="transferRequestReplyIdentifier"/>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Transferring Agency</span>
+            <span>Service versant</span>
             <br/>
             <input type="text" pInputText placeholder="Transferring Agency" [(ngModel)]="transferringAgency"/>
         </div>
 
         <div class="ui-g-12"></div>
         <div class="ui-g-12">
-            <h3>DIP only parameters</h3>
+            <h3>Paramètres pour le DIP</h3>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Message Request Identifier (Required) </span>
+            <span>Identifiant de la demande (Required) </span>
             <br/>
             <input type="text" pInputText placeholder="Message Request Identifier"
                    [(ngModel)]="messageRequestIdentifier"/>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Requester Identifier (Required)</span>
+            <span>Identifiant du demandeur (Required)</span>
             <br/>
             <input type="text" pInputText placeholder="Requester Identifier" [(ngModel)]="requesterIdentifier"/>
         </div>
 
         <div class="ui-g-4 textAlignLeft">
-            <span>Authorization Request Reply Identifier</span>
+            <span>Identifiant de la réponse à une demande d'autorisation</span>
             <br/>
             <input type="text" pInputText placeholder="Authorization Request Reply Identifier"
                    [(ngModel)]="authorizationRequestReplyIdentifier"/>
@@ -119,7 +119,7 @@
 
 
     <p-dialog header="Génération DIP" [(visible)]="display">
-        La génération du DIP ou Transfer est en cours...<br/>
+        La génération du DIP ou Transfert est en cours...<br/>
         Vous pourrez le télécharger dans le journal des opérations.
         <p-footer>
             <button pButton type="button" (click)="display = false" label="OK"></button>
