6036 - transfer reply ATR

--- a/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/security-internal/personal-certificate-permissions.conf.j2
@@ -9,6 +9,7 @@ permissionsWithoutPersonalCertificate:
   - 'dipexportv2:create'
   - 'dipexport:id:dip:read'
   - 'transfers:create'
+  - 'transfers:reply'
   - 'transfers:id:sip:read'
   - 'logbookobjectslifecycles:id:read'
   - 'logbookoperations:read'
