ITEM_6032_GET_SIP_OF_TRANSFERT

--- a/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-export-dip/archive-export-dip.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-export-dip/archive-export-dip.component.html
@@ -114,6 +114,9 @@
             <div class="ui-g-2">
                 <button pButton type="button" (click)="export('TRANSFER')" label="Transfer"></button>
             </div>
+            <div class="ui-g-2">
+                <button pButton type="button" *ngIf="displayExportTransferSIP" (click)="export('TRANSFERSIP')" label="Export Transfer SIP"></button>
+            </div>
         </div>
     </div>
 
