--- a/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-unit-details.component.html
+++ b/sources/ihm-demo/ihm-demo-front/src/app/archive-unit/archive-unit-details/archive-unit-details.component.html
@@ -22,7 +22,7 @@
 </vitam-loading-block>
 
 <vitam-archive-export-dip *ngIf="data" [id]="data['#id']"
-                          [operation]="data['#operations'][0]"></vitam-archive-export-dip>
+                          [operation]="data['#operations'][0]" [opts]="data['#opts']"></vitam-archive-export-dip>
 
 <vitam-archive-unit-selection *ngIf="data" [id]="data['#id']"
                               [operation]="data['#operations'][0]"></vitam-archive-unit-selection>
