possible fix provided by SAPHIR

--- a/deployment/ansible-vitam/roles/antivirus/templates/clamav-daemon.socket.j2
+++ b/deployment/ansible-vitam/roles/antivirus/templates/clamav-daemon.socket.j2
@@ -4,3 +4,6 @@ ListenStream=127.0.0.1:{{ clamav.port }}
 SocketUser=clamav
 SocketGroup=clamav
 RemoveOnStop=True
+
+[Install]
+WantedBy=sockets.target
