--- a/deployment/ansible-vitam/roles/functional_administration/templates/reconstruction.sh.j2
+++ b/deployment/ansible-vitam/roles/functional_administration/templates/reconstruction.sh.j2
@@ -23,6 +23,7 @@ local_curl INGEST_CONTRACT
 local_curl ACCESS_CONTRACT
 local_curl VITAM_SEQUENCE
 local_curl PROFILE
+local_curl ARCHIVE_UNIT_PROFILE
 local_curl AGENCIES
 local_curl CONTEXT
 local_curl SECURITY_PROFILE
