--- a/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/metadata/metadata.conf.j2
@@ -12,6 +12,9 @@ schemaValidatorCacheTimeoutInSeconds: {{ vitam.metadata.schemaValidatorCacheTime
 # DIP purge service (in minutes)
 dipTimeToLiveInMinutes: {{ vitam.metadata.dipTimeToLiveInMinutes }}
 
+# TRANSFER purge service (in minutes)
+transfersSIPTimeToLiveInMinutes: {{ vitam.metadata.transfersSIPTimeToLiveInMinutes }}
+
 # Configuration MongoDB
 mongoDbNodes:
 {% for server in groups['hosts_mongos_data'] %}
