--- a/deployment/ansible-vitam/roles/vitam/templates/storage/static-strategy.json.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/storage/static-strategy.json.j2
@@ -18,7 +18,7 @@
         "id" : "{{ strategy_name }}",
         "offers" : [
             {% for strategy_offer in strategy_offers %}
-            {"id" : "{{ strategy_offer.name }}.service.{{ strategy_offer.vitam_site_name |default(vitam_site_name) }}.{{ consul_domain }}"{% if strategy_offer.status is defined %}, "status" :  "{{ strategy_offer.status| upper }}" {% endif %}}{% if not loop.last %},{% endif %}
+            {"id" : "{{ strategy_offer.name }}.service.{{ strategy_offer.vitam_site_name |default(vitam_site_name) }}.{{ consul_domain }}"{% if strategy_offer.referent is defined %}{% if strategy_offer.referent|lower == "true" %}, "referent" : true{% endif %}{% endif %}{% if strategy_offer.status is defined %}, "status" :  "{{ strategy_offer.status| upper }}" {% endif %}}{% if not loop.last %},{% endif %}
             {% endfor %}
         ]
     }
