--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.log.yml.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.log.yml.j2
@@ -104,3 +104,9 @@ discovery.zen.ping.unicast.hosts: [ {% for host in groups['hosts_elasticsearch_l
 # Require explicit names when deleting indices:
 #
 action.destructive_requires_name: true
+
+# related to https://www.elastic.co/guide/en/elasticsearch/reference/6.8/modules-fielddata.html
+indices.fielddata.cache.size: {{ (((elasticsearch_memory_value|int) * (composant.indices_fielddata_cache_size|float)) | round (0, 'floor')) | int }}{{ elasticsearch_memory_unit }}
+
+# related to https://www.elastic.co/guide/en/elasticsearch/reference/6.8/circuit-breaker.html#fielddata-circuit-breaker
+indices.breaker.fielddata.limit: {{ (((elasticsearch_memory_value|int) * (composant.indices_breaker_fielddata_limit|float)) | round (0, 'floor')) | int }}{{ elasticsearch_memory_unit }}
