Possibility to manage access_log retention in days and size for each VITAM component bump from 5 days to 15 days be default for access_log added doc

--- a/deployment/ansible-vitam/roles/vitam/templates/logback-access.xml.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/logback-access.xml.j2
@@ -5,8 +5,8 @@
 	<appender name="FILE" class="ch.qos.logback.core.rolling.RollingFileAppender">
 		<rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
 			<fileNamePattern>{{ vitam_folder_log }}/accesslog-{{ vitam_struct.vitam_component }}.%d{yyyy-MM-dd}.log</fileNamePattern>
-			<maxHistory>{{ days_to_delete_access_local }}</maxHistory>
-      		<totalSizeCap>14GB</totalSizeCap>
+			<maxHistory>{{ vitam_struct.access_retention_days }}</maxHistory>
+      		<totalSizeCap>{{ vitam_struct.access_total_size_cap }}</totalSizeCap>
 		</rollingPolicy>
 {% else %}}
 
