Bug 6122 : add management contract to reconstruction script

--- a/deployment/ansible-vitam/roles/functional_administration/templates/reconstruction.sh.j2
+++ b/deployment/ansible-vitam/roles/functional_administration/templates/reconstruction.sh.j2
@@ -19,6 +19,7 @@ function local_curl() {
 # Main
 local_curl FORMATS
 local_curl RULES
+local_curl MANAGEMENT_CONTRACT
 local_curl INGEST_CONTRACT
 local_curl ACCESS_CONTRACT
 local_curl VITAM_SEQUENCE
