Item #6112 : Add vitam configuration information page in ihm-recette with at least strategies infos

--- a/sources/ihm-recette/ihm-recette-web-front/src/app/tests/dag-visualization/dag-visualization.component.html
+++ b/sources/ihm-recette/ihm-recette-web-front/src/app/tests/dag-visualization/dag-visualization.component.html
@@ -1,5 +1,5 @@
 <div class="ui-g-12 errorMessage">
-  <span>!!!! EXPERIMENTAL !!!!</span>
+  <span><a class="no-decoration" (click)="toggleEgg()">!!!!</a> EXPERIMENTAL <a class="no-decoration" (click)="toggleEgg()">!!!!</a></span>
 </div>
 
 <div class="ui-g-12">
