--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
@@ -142,3 +142,10 @@ indices.fielddata.cache.size: {{ (((elasticsearch_memory_value|int) * (composant
 
 # related to https://www.elastic.co/guide/en/elasticsearch/reference/6.8/circuit-breaker.html#fielddata-circuit-breaker
 indices.breaker.fielddata.limit: {{ (((elasticsearch_memory_value|int) * (composant.indices_breaker_fielddata_limit|float)) | round (0, 'floor')) | int }}{{ elasticsearch_memory_unit }}
+
+
+{% if groups['hosts_elasticsearch_data']|length > 1 %}
+# related to affinity and balancing between racks / rooms https://www.elastic.co/guide/en/elasticsearch/reference/current/allocation-awareness.html
+cluster.routing.allocation.awareness.attributes: rack_id
+node.attr.rack_id: {{ is_balancing|default(vitam_site_name) }}
+{% endif %}
