First SELinux implementation

--- a/deployment/ansible-vitam/roles/consul/templates/consul.json.j2
+++ b/deployment/ansible-vitam/roles/consul/templates/consul.json.j2
@@ -36,7 +36,7 @@
   "disable_update_check": true,
   "encrypt": "{{ consul_encrypt }}",
   "ports": {
-    "dns" : {{ consul.dns_port }}
+    "dns" : 53
   },
   "checks" : [
     {
