item 6164 ingest cleanup recette

--- a/deployment/ansible-vitam/roles/vitam/templates/ihm-recette/ihm-recette.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/ihm-recette/ihm-recette.conf.j2
@@ -47,3 +47,11 @@ elasticsearchNodes:
 - hostName: {{ hostvars[server]['ip_service'] }}
   tcpPort: {{ elasticsearch.data.port_tcp }}
 {% endfor %}
+
+# Functional Admin Configuration
+functionalAdminAdmin:
+   functionalAdminServerHost: {{ vitam.functional_administration.host }}
+   functionalAdminServerPort: {{ vitam.functional_administration.port_admin }}
+   adminBasicAuth:
+      userName: {{ admin_basic_auth_user }}
+      password: {{ admin_basic_auth_password }}
