--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
@@ -74,24 +74,13 @@ http.port: {{ composant.port_http }}
 # Pass an initial list of hosts to perform discovery when this node is started:
 # The default list of hosts is ["127.0.0.1", "[::1]"]
 #
-discovery.seed_hosts: [ {% for host in groups['hosts-elasticsearch-data'] %}"{{ hostvars[host]['ip_service'] }}"{% if not loop.last %},{% endif %}{% endfor %} ]
+discovery.seed_hosts: [ {% for host in groups['hosts_elasticsearch_data'] %}"{{ hostvars[host]['ip_service'] }}"{% if not loop.last %},{% endif %}{% endfor %} ]
 #
 # Bootstrap the cluster using an initial set of master-eligible nodes:
 #
-{% if composant.discovery_zen_minimum_master_nodes is defined %}
-cluster.initial_master_nodes: {{ composant.discovery_zen_minimum_master_nodes }}
+cluster.initial_master_nodes: [ {% for host in groups['hosts_elasticsearch_data'] %}"{{ host }}"{% if not loop.last %},{% endif %}{% endfor %} ]
 
-{% else %}
-{% if groups['hosts_elasticsearch_data']|length < 4 %}
-# for small deployments ; should be located only in "one rack_id"
-cluster.initial_master_nodes: {{ ((groups['hosts_elasticsearch_data']|length / 2)+1)| round (0, 'floor')| int }}
-
-{% else %}
-# Between ((N/2)-1) and (N/2) ; may be usefull when 2 "rooms"
-cluster.initial_master_nodes: {{ (groups['hosts_elasticsearch_data']|length / 2)| round (0, 'floor')| int }}
-
-{% endif %}
-{% endif %}
+cluster.no_master_block: all
 #
 # For more information, consult the discovery and cluster formation module documentation.
 #
@@ -124,7 +113,7 @@ indices.query.bool.max_clause_count: 10000
 indices.memory.index_buffer_size: {{ ((elasticsearch_memory_value|int)*(composant.index_buffer_size_ratio|float))|round (0, 'floor')| int }}{{ elasticsearch_memory_unit }}
 {% endif %}
 
-indices.mapping.dynamic_timeout: {{ composant.dynamic_timeout|default('30') }}
+indices.mapping.dynamic_timeout: {{ composant.dynamic_timeout|default('30s') }}
 
 # thread_pool configuration
 thread_pool:
@@ -155,9 +144,11 @@ indices.fielddata.cache.size: {{ (((elasticsearch_memory_value|int) * (composant
 # related to https://www.elastic.co/guide/en/elasticsearch/reference/6.8/circuit-breaker.html#fielddata-circuit-breaker
 indices.breaker.fielddata.limit: {{ (((elasticsearch_memory_value|int) * (composant.indices_breaker_fielddata_limit|float)) | round (0, 'floor')) | int }}{{ elasticsearch_memory_unit }}
 
-
 {% if groups['hosts_elasticsearch_data']|length > 1 %}
 # related to affinity and balancing between racks / rooms https://www.elastic.co/guide/en/elasticsearch/reference/current/allocation-awareness.html
 cluster.routing.allocation.awareness.attributes: rack_id
 node.attr.rack_id: {{ is_balancing|default(vitam_site_name) }}
 {% endif %}
+
+# FIXME this will increases risk of running into out of memory errors by overloading the node
+indices.breaker.total.use_real_memory: false
