--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.log.yml.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.log.yml.j2
@@ -74,12 +74,12 @@ http.port: {{ composant.port_http }}
 # Pass an initial list of hosts to perform discovery when this node is started:
 # The default list of hosts is ["127.0.0.1", "[::1]"]
 #
-discovery.seed_hosts: [ {% for host in groups['hosts-elasticsearch-log'] %}"{{ hostvars[host]['ip_admin'] }}"{% if not loop.last %},{% endif %}{% endfor %} ]
+discovery.seed_hosts: [ {% for host in groups['hosts_elasticsearch_log'] %}"{{ hostvars[host]['ip_admin'] }}"{% if not loop.last %},{% endif %}{% endfor %} ]
 #
 # Bootstrap the cluster using an initial set of master-eligible nodes:
 #
 # TODO OMA : faire mieux, plus propre et prenant bien en compte is_master de chaque membre
-cluster.initial_master_nodes: [ {% for host in groups['hosts-elasticsearch-log'] %}"{{ hostvars[host]['ip_admin'] }}"{% if not loop.last %},{% endif %}{% endfor %} ]
+cluster.initial_master_nodes: [ {% for host in groups['hosts_elasticsearch_log'] %}"{{ hostvars[host]['ip_admin'] }}"{% if not loop.last %},{% endif %}{% endfor %} ]
 #
 # For more information, consult the discovery and cluster formation module documentation.
 #
@@ -103,7 +103,7 @@ indices.fielddata.cache.size: {{ (((elasticsearch_memory_value|int) * (composant
 # related to https://www.elastic.co/guide/en/elasticsearch/reference/7.3/circuit-breaker.html#fielddata-circuit-breaker
 indices.breaker.fielddata.limit: {{ (((elasticsearch_memory_value|int) * (composant.indices_breaker_fielddata_limit|float)) | round (0, 'floor')) | int }}{{ elasticsearch_memory_unit }}
 
-indices.mapping.dynamic_timeout: {{ composant.dynamic_timeout|default('30') }}
+indices.mapping.dynamic_timeout: {{ composant.dynamic_timeout|default('30s') }}
 
 {% if groups['hosts_elasticsearch_log']|length > 1 %}
 # related to affinity and balancing between racks / rooms https://www.elastic.co/guide/en/elasticsearch/reference/current/allocation-awareness.html
