--- a/deployment/ansible-vitam/roles/vitam/templates/elastic-kibana-interceptor/elastic-kibana-interceptor.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/elastic-kibana-interceptor/elastic-kibana-interceptor.conf.j2
@@ -4,6 +4,6 @@ clusterName: {{ vitam_struct.cluster_name }}
 elasticsearchNodes:
 {% for server in groups['hosts_elasticsearch_data'] %}
 - hostName: {{ hostvars[server]['ip_service'] }}
-  tcpPort: {{ elasticsearch.data.port_http }}
+  httpPort: {{ elasticsearch.data.port_http }}
 {% endfor %}
 whitelist : ["tenant", "all", "mgt", "min", "max", "nbc", "og", "ops", "opi", "sp", "sps", "uds", "up", "us", "storage", "unitType", "v", "qualifiers"]
