--- a/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-offer/init-offer-database.js.j2
+++ b/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-offer/init-offer-database.js.j2
@@ -1,11 +1,14 @@
-
 // Switch to identity database
 db = db.getSiblingDB('offer')
 
 // Create indexes
 // A single collection can have no more than 64 indexes.
-db.OfferLog.createIndex( { "Container" : 1, "Sequence" : 1 } )
+db.OfferLog.createIndex( { "Container" : 1, "Sequence" : 1, "Time": -1 } )
+db.CompactedOfferLog.createIndex( { "Container" : 1, "SequenceStart" : 1, "SequenceEnd" : -1 } )
 
 // Drop existing index container
 db.OfferLog.dropIndex( { "container" : 1} )
 db.OfferLog.dropIndex( { "Container" : 1} )
+
+// For migration
+db.OfferLog.dropIndex( { "Container" : 1, "Sequence" : 1 } )
