--- a/deployment/ansible-vitam/roles/vitam/templates/offer/offer.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/offer/offer.conf.j2
@@ -15,3 +15,8 @@ dbName: offer
 dbAuthentication: {{ mongodb.mongo_authentication }}
 dbUserName: {{ mongodb[offer_conf].offer.user }}
 dbPassword: {{ mongodb[offer_conf].offer.password }}
+
+offerLogCompaction:
+  expirationValue: {{ vitam_offers[offer_conf].offer_log_compaction.expiration_value | default(21) }}
+  expirationUnit: {{ vitam_offers[offer_conf].offer_log_compaction.expiration_unit | default("DAYS") }}
+  compactionSize: {{ vitam_offers[offer_conf].offer_log_compaction.compaction_size | default(10000) }}
