--- a/deployment/ansible-vitam/roles/vitam/templates/java.security.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/java.security.j2
@@ -2,5 +2,5 @@
 security.provider.9=org.bouncycastle.jce.provider.BouncyCastleProvider
 
 # Override the default list of Centos 7 that disable Elliptic Curved Based Algorithms
-jdk.tls.disabledAlgorithms="SSLv3, RC4, MD5withRSA, DH keySize < 768,RSA keySize < 2048"
+jdk.tls.disabledAlgorithms="SSLv3, TLSv1, TLSv1.1, RC4, MD5withRSA, DH keySize < 768,RSA keySize < 2048"
 
