Fix ES 7 : no ILM

--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
@@ -155,3 +155,8 @@ node.attr.rack_id: {{ is_balancing|default(vitam_site_name) }}
 
 # FIXME this will increases risk of running into out of memory errors by overloading the node
 indices.breaker.total.use_real_memory: false
+
+
+# Related to https://www.elastic.co/guide/en/elasticsearch/reference/current/ilm-settings.html
+xpack.ilm.enabled: false
+indices.lifecycle.history_index_enabled: false
