--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.log.yml.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.log.yml.j2
@@ -132,3 +132,7 @@ thread_pool:
 cluster.routing.allocation.awareness.attributes: rack_id
 node.attr.rack_id: {{ is_balancing|default(vitam_site_name) }}
 {% endif %}
+
+# Related to https://www.elastic.co/guide/en/elasticsearch/reference/current/ilm-settings.html
+xpack.ilm.enabled: false
+indices.lifecycle.history_index_enabled: false
