--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/jvm.options.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/jvm.options.j2
@@ -32,12 +32,18 @@
 ##
 ################################################################
 
+## GC configuration
+8-13:-XX:+UseConcMarkSweepGC
+8-13:-XX:CMSInitiatingOccupancyFraction=75
+8-13:-XX:+UseCMSInitiatingOccupancyOnly
+
 ## G1GC Configuration
 # NOTE: G1 GC is only supported on JDK version 10 or later
-10-:-XX:+UseG1GC
-# 10-:-XX:InitiatingHeapOccupancyPercent=75
-# 10-:-XX:-UseConcMarkSweepGC
-# 10-:-XX:-UseCMSInitiatingOccupancyOnly
+# to use G1GC, uncomment the next two lines and update the version on the
+# following three lines to your version of the JDK
+# 10-13:-XX:-UseConcMarkSweepGC
+# 10-13:-XX:-UseCMSInitiatingOccupancyOnly
+14-:-XX:+UseG1GC
 14-:-XX:G1ReservePercent=25
 14-:-XX:InitiatingHeapOccupancyPercent=30
 
@@ -108,24 +114,11 @@
 8:-XX:+PrintGCApplicationStoppedTime
 8:-Xloggc:/var/log/elasticsearch/gc.log
 8:-XX:+UseGCLogFileRotation
-8:-XX:NumberOfGCLogFiles=10
-8:-XX:GCLogFileSize=10M
-# turn off a JDK optimization that throws away stack traces for common
-# exceptions because stack traces are important for debugging
-8:-XX:-OmitStackTraceInFastThrow
+8:-XX:NumberOfGCLogFiles=32
+8:-XX:GCLogFileSize=64m
 
 # JDK 9+ GC logging
 9-:-Xlog:gc*,gc+age=trace,safepoint:file={{ elasticsearch_log_dir }}/gc.log:utctime,pid,tags:filecount=32,filesize=64m
-# due to internationalization enhancements in JDK 9 Elasticsearch need to set the provider to COMPAT otherwise
-# time/date parsing will break in an incompatible way for some date patterns and locals
-9-:-Djava.locale.providers=COMPAT
-# use old-style file permissions on JDK9
-9:-Djdk.io.permissionsUseCanonicalPath=true
-# temporary workaround for C2 bug with JDK 10 on hardware with AVX-512
-10-:-XX:UseAVX=2
 
-# log GC status to a file with time stamps
-# ensure the directory exists
-#-Xloggc:${loggc}
 
 -Djna.tmpdir={{ vitam_defaults.folder.root_path }}/tmp/{{ composant.cluster_name }}
