--- a/deployment/ansible-vitam/roles/vitam/templates/ihm-recette/ihm-recette.conf.j2
+++ b/deployment/ansible-vitam/roles/vitam/templates/ihm-recette/ihm-recette.conf.j2
@@ -48,6 +48,13 @@ elasticsearchNodes:
   httpPort: {{ elasticsearch.data.port_http }}
 {% endfor %}
 
+# ElasticSearch External Metadata Mapping
+elasticsearchExternalMetadataMappings:
+- collection: Unit
+  mappingFile: {{ vitam.ihm_recette.elasticsearch_mapping_dir }}/unit-es-mapping.json
+- collection: ObjectGroup
+  mappingFile: {{ vitam.ihm_recette.elasticsearch_mapping_dir }}/og-es-mapping.json
+
 # Functional Admin Configuration
 functionalAdminAdmin:
    functionalAdminServerHost: {{ vitam.functional_administration.host }}
