--- a/deployment/ansible-vitam-extra/roles/metricbeat/templates/metricbeat.yml.j2
+++ b/deployment/ansible-vitam-extra/roles/metricbeat/templates/metricbeat.yml.j2
@@ -159,17 +159,17 @@ logging.to_files: true
 logging.files:
   # Configure the path where the logs are written. The default is the logs directory
   # under the home path (the binary location).
-  path: /var/log/metricbeat
+  path: {{ vitam_defaults.folder.root_path }}/log/metricbeat
 
   # The name of the files where the logs are written to.
-  #name: metricbeat
+  name: metricbeat
 
   # Configure log file size limit. If limit is reached, log file will be
   # automatically rotated
-  #rotateeverybytes: 10485760 # = 10MB
+  rotateeverybytes: 10485760 # = 10MB
 
   # Number of rotated log files to keep. Oldest files will be deleted first.
-  #keepfiles: 7
+  keepfiles: 7
 
   # The permissions mask to apply when rotating log files. The default value is 0600.
   # Must be a valid Unix-style file permissions mask expressed in octal notation.
