--- a/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
+++ b/deployment/ansible-vitam/roles/elasticsearch-cluster/templates/elasticsearch.data.yml.j2
@@ -142,10 +142,10 @@ thread_pool:
 # Note : in ES5 and further : the thread pool "refresh" is of type scaling with a keep-alive of 5m and a max of min(10, (# of available processors)/2)
 
 # related to https://www.elastic.co/guide/en/elasticsearch/reference/6.8/modules-fielddata.html
-indices.fielddata.cache.size: {{ (((elasticsearch_memory_value|int) * (composant.indices_fielddata_cache_size|float)) | round (0, 'floor')) | int }}{{ elasticsearch_memory_unit }}
+indices.fielddata.cache.size: {{ composant.indices_fielddata_cache_size }}
 
 # related to https://www.elastic.co/guide/en/elasticsearch/reference/6.8/circuit-breaker.html#fielddata-circuit-breaker
-indices.breaker.fielddata.limit: {{ (((elasticsearch_memory_value|int) * (composant.indices_breaker_fielddata_limit|float)) | round (0, 'floor')) | int }}{{ elasticsearch_memory_unit }}
+indices.breaker.fielddata.limit: {{ composant.indices_breaker_fielddata_limit }}
 
 {% if groups['hosts_elasticsearch_data']|length > 1 %}
 # related to affinity and balancing between racks / rooms https://www.elastic.co/guide/en/elasticsearch/reference/current/allocation-awareness.html
