Fix number of accession register, add 2 because we have a new preservation scenario that had new data.

--- a/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-report-database.js.j2
+++ b/deployment/ansible-vitam/roles/mongo_configure/templates/mongo-data/init-report-database.js.j2
@@ -46,3 +46,6 @@ db.InvalidUnits.dropIndex( { "processId" : 1} )
 db.EvidenceAuditReport.createIndex( { "processId" : 1, "_tenant" : 1 } )
 db.EvidenceAuditReport.createIndex( { "processId" : 1, "_tenant" : 1, "_metadata.id" : 1 } )
 db.EvidenceAuditReport.createIndex( { "processId" : 1, "_tenant" : 1, "_metadata.status" : 1 } )
+
+// Create indexes ExtractedMetadata
+db.ExtractedMetadata.createIndex( { "processId" : 1, "tenant" : 1, "id" : 1 } )
